@@ -1,3 +1,12 @@
+2020-11-10  Carlos Garcia Campos  <cgarcia@igalia.com>
+
+        [GTK] MiniBrowser: add buttons to insert ordered/unordered lists to editor toolbar
+        https://bugs.webkit.org/show_bug.cgi?id=218648
+
+        Reviewed by Carlos Alberto Lopez Perez.
+
+        * MiniBrowser/gtk/BrowserWindow.c:
+
 2020-11-09  Aakash Jain  <aakash_jain@apple.com>
 
         [build.webkit.org] Do not print master environment variables in build steps
